--- a/src/assets/fonts/font.scss
+++ b/src/assets/fonts/font.scss
@@ -1,16 +1,17 @@
 @font-face {
   font-family: 'iconfont'; /* Project id 2617113 */
-  src: url('//at.alicdn.com/t/font_2617113_oldofwovbvs.eot?t=1624084969710'); /* IE9 */
-  src: url('//at.alicdn.com/t/font_2617113_oldofwovbvs.eot?t=1624084969710#iefix')
+  font-family: 'iconfont'; /* Project id 2617113 */
+  src: url('//at.alicdn.com/t/font_2617113_b9nike3vg86.eot?t=1626746162517'); /* IE9 */
+  src: url('//at.alicdn.com/t/font_2617113_b9nike3vg86.eot?t=1626746162517#iefix')
       format('embedded-opentype'),
     /* IE6-IE8 */
-      url('//at.alicdn.com/t/font_2617113_oldofwovbvs.woff2?t=1624084969710')
+      url('//at.alicdn.com/t/font_2617113_b9nike3vg86.woff2?t=1626746162517')
       format('woff2'),
-    url('//at.alicdn.com/t/font_2617113_oldofwovbvs.woff?t=1624084969710')
+    url('//at.alicdn.com/t/font_2617113_b9nike3vg86.woff?t=1626746162517')
       format('woff'),
-    url('//at.alicdn.com/t/font_2617113_oldofwovbvs.ttf?t=1624084969710')
+    url('//at.alicdn.com/t/font_2617113_b9nike3vg86.ttf?t=1626746162517')
       format('truetype'),
-    url('//at.alicdn.com/t/font_2617113_oldofwovbvs.svg?t=1624084969710#iconfont')
+    url('//at.alicdn.com/t/font_2617113_b9nike3vg86.svg?t=1626746162517#iconfont')
       format('svg');
 }
 
@@ -20,6 +21,14 @@
   font-style: normal;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+.cs-icon-yanjing:before {
+  content: '\e629';
+}
+
+.cs-icon-guanbi:before {
+  content: '\e612';
 }
 
 .cs-icon-huanyipi:before {
